--- a/www/layouts/partials/post_nav_links.html
+++ b/www/layouts/partials/post_nav_links.html
@@ -1,7 +1,6 @@
 {{- if .Params.series }}
 {{- $series := index .Params.series 0 }}
-{{- $pages := where (where site.RegularPages "Params.series" "intersect" (slice $series)) "Type" "in" site.Params.mainSections }}
-{{- if and (gt (len $pages) 1) (in $pages . ) }}
+{{- $pages := sort (where (where site.RegularPages "Params.series" "intersect" (slice $series)) "Type" "in" site.Params.mainSections) "Params.series_weight" "asc" }}{{- if and (gt (len $pages) 1) (in $pages . ) }}
 <nav class="paginav">
   {{- with $pages.Next . }}
   <a class="prev" href="{{ .Permalink }}">
