--- a/www/layouts/partials/extend_footer.html
+++ b/www/layouts/partials/extend_footer.html
@@ -1,2 +1,3 @@
+<p style="font-size: 0.7em; color: #777; text-align: center">Some posts may contain affiliate links. As an Amazon Associate, I earn from qualifying purchases.</p>
 <center><img src="https://github.com/scottlowry/ScottLowry.net/actions/workflows/azure-static-web-apps-agreeable-tree-0f0c02a1e.yml/badge.svg" alt="Deploy Status"></center>
 <br>
